--- a/Battle_of_the_Neighborhoods_Data_Section.ipynb
+++ b/Battle_of_the_Neighborhoods_Data_Section.ipynb
@@ -11,12 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The data for this project will be derived from Geopy, a popular Python Geography library, along with the FourSquare API's exploration endpoint. This data will consist of the coordinates and names of all of Phoenix, Arizona's neighborhoods; the coordinates of the center of the city itself; and lists containing details on up to 100 venues per neighborhood.\n",
+    "The data for this project will be derived from Geopy, a popular Python Geography library, along with the FourSquare API's exploration endpoint, and a list of Phoenix neighborhoods from Wikipedia. This data will consist of the coordinates and names of all of Phoenix, Arizona's neighborhoods; the coordinates of the center of the city itself; and lists containing details on up to 100 venues per neighborhood.\n",
     "\n",
     "Each venue list will contain the name, coordinates, and venue category for each venue in the list.\n",
     "\n",
-    "These data will be merged together in a dataframe, and the venue categories will then be one-hot encoded, averaged to show what categories are most prevalent, and merged in as well.\n",
-    "The resulting dataframe will be used for k-means clustering, which will help with identifying the neighborhoods that will be more suitable for the 50+ aged community."
+    "These data will be merged together in a dataframe, and the venue categories will then be one-hot encoded, averaged to show what categories are most prevalent, and merged in as well. The resulting dataframe will be used for k-means clustering with the scikit-learn library, which will help with identifying the neighborhoods that will be more suitable for the 50+ aged community.\n",
+    "\n",
+    "Once the data has been clustered, each of the clusters will be assigned a name that denotes the focus of the neighborhoods, and the clusters that are most friendly for the 50+ crowd will be flagged.\n"
    ]
   },
   {
